@@ -1,3 +1,8 @@
+2000-06-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* wctype/towctrans.c (__towctrans): Be graceful and accept error
+	return values from the wctrans function.
+
 2000-06-27  Greg McGary  <greg@mcgary.org>
 
 	* elf/dl-open.c (_dl_sysdep_start): Wrap weak_extern decl in BP_SYM ().
